force-app/main/default/objects/HP_Souscription__c/HP_Souscription__c.object-meta.xml
<CustomObject>
    <label>Souscription Happe</label>
    <nameField>
        <displayFormat>HPS-{00000000}</displayFormat>
        <label>Nom de Souscription</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Souscriptions Happe</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>