force-app/main/default/objects/HP_Souscription__c/fields/commentaire__c.field-meta.xml
<CustomField>
    <fullName>commentaire__c</fullName>
    <label>Commentaire</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>