force-app/main/default/objects/HP_Souscription__c/fields/HP_ActivationPrioritaire__c.field-meta.xml
<CustomField>
    <fullName>HP_ActivationPrioritaire__c</fullName>
    <formula>IF(NOT(ISNULL(HP_DigitalDateSave2__c)), 
      AND(HP_Date_de_Contractualisation__c - DATEVALUE(HP_DigitalDateSave2__c) &lt;= 6, ISPICKVAL(HP_type_Souscription__c , &quot;MOVING_IN&quot;)), 
      false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation prioritaire</label>
    <type>Checkbox</type>
</CustomField>