force-app/main/default/objects/HP_Souscription__c/fields/HP_CampaignLabel__c.field-meta.xml
<CustomField>
    <fullName>HP_CampaignLabel__c</fullName>
    <label>Libellé campagne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>