force-app/main/default/objects/HP_Souscription__c/fields/HP_CampaignMedium__c.field-meta.xml
<CustomField>
    <fullName>HP_CampaignMedium__c</fullName>
    <label>Support campagne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>