force-app/main/default/objects/HP_Souscription__c/fields/HP_CampaignSource__c.field-meta.xml
<CustomField>
    <fullName>HP_CampaignSource__c</fullName>
    <label>Source campagne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>