force-app/main/default/objects/HP_Souscription__c/fields/HP_Canal_de_vente__c.field-meta.xml
<CustomField>
    <fullName>HP_Canal_de_vente__c</fullName>
    <label>Canal de vente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>