force-app/main/default/objects/HP_Souscription__c/fields/HP_Classe_de_la_consommation_Gaz__c.field-meta.xml
<CustomField>
    <fullName>HP_Classe_de_la_consommation_Gaz__c</fullName>
    <label>Classe de la consommation Gaz</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BASE</fullName>
            </value>
            <value>
                <fullName>B0</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>