force-app/main/default/objects/HP_Souscription__c/fields/HP_Client__c.field-meta.xml
<CustomField>
    <fullName>HP_Client__c</fullName>
    <description>Mis à jour par workflow</description>
    <label>Nom Contractant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>