force-app/main/default/objects/HP_Souscription__c/fields/HP_CoContractant__c.field-meta.xml
<CustomField>
    <fullName>HP_CoContractant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-contractant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Souscriptions Happe (Cocontractant)</relationshipLabel>
    <relationshipName>Souscriptions_Happe</relationshipName>
    <type>Lookup</type>
</CustomField>