force-app/main/default/objects/HP_Souscription__c/fields/HP_Code_Gaz_Produit__c.field-meta.xml
<CustomField>
    <fullName>HP_Code_Gaz_Produit__c</fullName>
    <label>Code offre gaz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>