force-app/main/default/objects/HP_Souscription__c/fields/HP_Code_postal__c.field-meta.xml
<CustomField>
    <fullName>HP_Code_postal__c</fullName>
    <label>Code postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>