force-app/main/default/objects/HP_Souscription__c/fields/HP_code_Postal_Insee__c.field-meta.xml
<CustomField>
    <fullName>HP_code_Postal_Insee__c</fullName>
    <label>Code INSEE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>