force-app/main/default/objects/HP_Souscription__c/fields/HP_code_Postal_Insee_facturation__c.field-meta.xml
<CustomField>
    <fullName>HP_code_Postal_Insee_facturation__c</fullName>
    <label>Code INSEE - facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>