force-app/main/default/objects/HP_Souscription__c/fields/HP_code_promotion__c.field-meta.xml
<CustomField>
    <fullName>HP_code_promotion__c</fullName>
    <label>Code promo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>