force-app/main/default/objects/HP_Souscription__c/fields/HP_Complement_d_adresse_facturation__c.field-meta.xml
<CustomField>
    <fullName>HP_Complement_d_adresse_facturation__c</fullName>
    <label>Complément d&apos;adresse - facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>