force-app/main/default/objects/HP_Souscription__c/fields/HP_Consentement_GRD__c.field-meta.xml
<CustomField>
    <fullName>HP_Consentement_GRD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consentement GRD</label>
    <type>Checkbox</type>
</CustomField>