force-app/main/default/objects/HP_Souscription__c/fields/Hp_consentementQ1_2__c.field-meta.xml
<CustomField>
    <fullName>Hp_consentementQ1_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consentement Q:1.2</label>
    <type>Checkbox</type>
</CustomField>