force-app/main/default/objects/HP_Souscription__c/fields/Hp_consentementXdata__c.field-meta.xml
<CustomField>
    <fullName>Hp_consentementXdata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consentement Xdata</label>
    <type>Checkbox</type>
</CustomField>