force-app/main/default/objects/HP_Souscription__c/fields/HP_Contact__c.field-meta.xml
<CustomField>
    <fullName>HP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Souscriptions Happe</relationshipLabel>
    <relationshipName>HP_Souscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>