force-app/main/default/objects/HP_Souscription__c/fields/HP_CPVperimee__c.field-meta.xml
<CustomField>
    <fullName>HP_CPVperimee__c</fullName>
    <formula>if(and(or(ISPICKVAL(HP_Statut__c , &quot;SAVE_2&quot;), ISPICKVAL(HP_Statut__c , &quot;SAVE_2_CONFIRMED&quot;)),  DateValue(HP_DigitalDateSave2__c) &lt; Today() - 30), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPV périmée</label>
    <type>Checkbox</type>
</CustomField>