force-app/main/default/objects/HP_Souscription__c/fields/HP_creation_CPV_gaz__c.field-meta.xml
<CustomField>
    <fullName>HP_creation_CPV_gaz__c</fullName>
    <label>Création document - CPV gaz</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>