force-app/main/default/objects/HP_Souscription__c/fields/HP_Date_de_Contractualisation__c.field-meta.xml
<CustomField>
    <fullName>HP_Date_de_Contractualisation__c</fullName>
    <label>Date de début de contrat souhaitée</label>
    <type>Date</type>
</CustomField>