force-app/main/default/objects/HP_Souscription__c/fields/HP_Date_Origine__c.field-meta.xml
<CustomField>
    <fullName>HP_Date_Origine__c</fullName>
    <label>Date Origine</label>
    <type>DateTime</type>
</CustomField>