force-app/main/default/objects/HP_Souscription__c/fields/HP_DigitalDateSave2__c.field-meta.xml
<CustomField>
    <fullName>HP_DigitalDateSave2__c</fullName>
    <label>Date de lead (Digital - save 2)</label>
    <type>DateTime</type>
</CustomField>