force-app/main/default/objects/HP_Souscription__c/fields/HP_DigitalDateSave3__c.field-meta.xml
<CustomField>
    <fullName>HP_DigitalDateSave3__c</fullName>
    <label>Date de signature (Digital - save 3)</label>
    <type>DateTime</type>
</CustomField>