force-app/main/default/objects/HP_Souscription__c/fields/HP_DigitalDocumentMandateId__c.field-meta.xml
<CustomField>
    <fullName>HP_DigitalDocumentMandateId__c</fullName>
    <label>Id Document - Mandat SEPA</label>
    <length>40</length>
    <type>Text</type>
</CustomField>