force-app/main/default/objects/HP_Souscription__c/fields/HP_DigitalElecDocumentId__c.field-meta.xml
<CustomField>
    <fullName>HP_DigitalElecDocumentId__c</fullName>
    <label>Id Document - CPV Elec</label>
    <length>40</length>
    <type>Text</type>
</CustomField>