force-app/main/default/objects/HP_Souscription__c/fields/HP_DigitalExemplaires__c.field-meta.xml
<CustomField>
    <fullName>HP_DigitalExemplaires__c</fullName>
    <label>Type de vente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>