force-app/main/default/objects/HP_Souscription__c/fields/HP_DigitalGazDocumentId__c.field-meta.xml
<CustomField>
    <fullName>HP_DigitalGazDocumentId__c</fullName>
    <label>Id Document - CPV gaz</label>
    <length>40</length>
    <type>Text</type>
</CustomField>