force-app/main/default/objects/HP_Souscription__c/fields/HP_DigitalLogin__c.field-meta.xml
<CustomField>
    <fullName>HP_DigitalLogin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID vendeur</label>
    <referenceTo>HP_PortailUtilisateur__c</referenceTo>
    <relationshipLabel>Souscriptions Happe</relationshipLabel>
    <relationshipName>Happ_e_Informations_de_souscriptionV2</relationshipName>
    <type>Lookup</type>
</CustomField>