force-app/main/default/objects/HP_Souscription__c/fields/HP_DigitalUpdatePropositionStatus__c.field-meta.xml
<CustomField>
    <fullName>HP_DigitalUpdatePropositionStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital - Mise à jour statut proposition</label>
    <type>Checkbox</type>
</CustomField>