force-app/main/default/objects/HP_Souscription__c/fields/HP_DocumentMandateId__c.field-meta.xml
<CustomField>
    <fullName>HP_DocumentMandateId__c</fullName>
    <label>HP_DocumentMandateId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>