force-app/main/default/objects/HP_Souscription__c/fields/HP_emailDevis__c.field-meta.xml
<CustomField>
    <fullName>HP_emailDevis__c</fullName>
    <label>Email devis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>