force-app/main/default/objects/HP_Souscription__c/fields/HP_Energie_Verte__c.field-meta.xml
<CustomField>
    <fullName>HP_Energie_Verte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Energie Verte</label>
    <type>Checkbox</type>
</CustomField>