force-app/main/default/objects/HP_Souscription__c/fields/HP_EnvoyerNotificationClient__c.field-meta.xml
<CustomField>
    <fullName>HP_EnvoyerNotificationClient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envoyer notification au client</label>
    <type>Checkbox</type>
</CustomField>