force-app/main/default/objects/HP_Souscription__c/fields/HP_EstColoc__c.field-meta.xml
<CustomField>
    <fullName>HP_EstColoc__c</fullName>
    <label>Colocation ?</label>
    <length>3</length>
    <type>Text</type>
</CustomField>