force-app/main/default/objects/HP_Souscription__c/fields/HP_Estimation_Consommation_gaz__c.field-meta.xml
<CustomField>
    <fullName>HP_Estimation_Consommation_gaz__c</fullName>
    <label>Estimation Consommation gaz</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>