force-app/main/default/objects/HP_Souscription__c/fields/HP_Gaia_Id__c.field-meta.xml
<CustomField>
    <fullName>HP_Gaia_Id__c</fullName>
    <label>Id Gaia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>