force-app/main/default/objects/HP_Souscription__c/fields/HP_IBAN__c.field-meta.xml
<CustomField>
    <fullName>HP_IBAN__c</fullName>
    <label>IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>