force-app/main/default/objects/HP_Souscription__c/fields/HP_isCommunicantGaz__c.field-meta.xml
<CustomField>
    <fullName>HP_isCommunicantGaz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compteur communicant</label>
    <type>Checkbox</type>
</CustomField>