force-app/main/default/objects/HP_Souscription__c/fields/HP_isElecENGIE__c.field-meta.xml
<CustomField>
    <fullName>HP_isElecENGIE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migration ENGIE</label>
    <type>Checkbox</type>
</CustomField>