force-app/main/default/objects/HP_Souscription__c/fields/HP_isGaspar__c.field-meta.xml
<CustomField>
    <fullName>HP_isGaspar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compteur Gazpar</label>
    <type>Checkbox</type>
</CustomField>