force-app/main/default/objects/HP_Souscription__c/fields/HP_isLinky__c.field-meta.xml
<CustomField>
    <fullName>HP_isLinky__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compteur Linky</label>
    <type>Checkbox</type>
</CustomField>