force-app/main/default/objects/HP_Souscription__c/fields/HP_Jour_de_facturation__c.field-meta.xml
<CustomField>
    <fullName>HP_Jour_de_facturation__c</fullName>
    <label>Date de réglement personnalisée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>