force-app/main/default/objects/HP_Souscription__c/fields/HP_Lien_enregistrement__c.field-meta.xml
<CustomField>
    <fullName>HP_Lien_enregistrement__c</fullName>
    <label>Lien d&apos;enregistrement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>