force-app/main/default/objects/HP_Souscription__c/fields/HP_Methode_de_paiement__c.field-meta.xml
<CustomField>
    <fullName>HP_Methode_de_paiement__c</fullName>
    <label>Mode de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRANSFER</fullName>
                <label>Prélèvement</label>
            </value>
            <value>
                <fullName>BANK_CARD</fullName>
                <label>Carte bancaire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>