force-app/main/default/objects/HP_Souscription__c/fields/HP_Montant_de_la_facturation_gaz__c.field-meta.xml
<CustomField>
    <fullName>HP_Montant_de_la_facturation_gaz__c</fullName>
    <label>Montant de la mensualité - gaz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>