force-app/main/default/objects/HP_Souscription__c/fields/HP_Nom_Contractant__c.field-meta.xml
<CustomField>
    <fullName>HP_Nom_Contractant__c</fullName>
    <label>Nom Contractant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>