force-app/main/default/objects/HP_Souscription__c/fields/HP_Nom_de_rue_facturation__c.field-meta.xml
<CustomField>
    <fullName>HP_Nom_de_rue_facturation__c</fullName>
    <label>Nom de rue - facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>