force-app/main/default/objects/HP_Souscription__c/fields/HP_NumberPCE__c.field-meta.xml
<CustomField>
    <fullName>HP_NumberPCE__c</fullName>
    <label>N° PCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>