force-app/main/default/objects/HP_Souscription__c/fields/HP_Numero_de_voie__c.field-meta.xml
<CustomField>
    <fullName>HP_Numero_de_voie__c</fullName>
    <label>Numéro de voie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>