force-app/main/default/objects/HP_Souscription__c/fields/HP_NumPDL__c.field-meta.xml
<CustomField>
    <fullName>HP_NumPDL__c</fullName>
    <label>N° PDL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>