force-app/main/default/objects/HP_Souscription__c/fields/HP_OptionVert__c.field-meta.xml
<CustomField>
    <fullName>HP_OptionVert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Option Vertelec+ happ-e</label>
    <type>Checkbox</type>
</CustomField>