force-app/main/default/objects/HP_Souscription__c/fields/HP_Parrainage__c.field-meta.xml
<CustomField>
    <fullName>HP_Parrainage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parrainage</label>
    <type>Checkbox</type>
</CustomField>