force-app/main/default/objects/HP_Souscription__c/fields/HP_Periode_de_facturation__c.field-meta.xml
<CustomField>
    <fullName>HP_Periode_de_facturation__c</fullName>
    <label>Fréquence de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MONTHLY</fullName>
                <label>Annuel</label>
            </value>
            <value>
                <fullName>BIMONTHLY</fullName>
                <label>Bimestriel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>