force-app/main/default/objects/HP_Souscription__c/fields/HP_Plan_de_Prix_electrique__c.field-meta.xml
<CustomField>
    <fullName>HP_Plan_de_Prix_electrique__c</fullName>
    <label>Type de comptage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BASE</fullName>
                <label>Simple</label>
            </value>
            <value>
                <fullName>VARIABLE</fullName>
                <label>HP/HC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>