force-app/main/default/objects/HP_Souscription__c/fields/HP_Porte_Feuille_Contrat__c.field-meta.xml
<CustomField>
    <fullName>HP_Porte_Feuille_Contrat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portefeuille Contrat</label>
    <referenceTo>HP_Porte_Feuille_Contrat__c</referenceTo>
    <relationshipLabel>Souscriptions Happe</relationshipLabel>
    <relationshipName>HP_Souscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>