force-app/main/default/objects/HP_Souscription__c/fields/HP_Predecesseur__c.field-meta.xml
<CustomField>
    <fullName>HP_Predecesseur__c</fullName>
    <label>Nom du prédécesseur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>