force-app/main/default/objects/HP_Souscription__c/fields/HP_Presence_mot_interdit__c.field-meta.xml
<CustomField>
    <fullName>HP_Presence_mot_interdit__c</fullName>
    <label>Présence d&apos;un mot interdit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mot interdit trouvé</fullName>
            </value>
            <value>
                <fullName>Pas de mot interdit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>