force-app/main/default/objects/HP_Souscription__c/fields/HP_Prestataire__c.field-meta.xml
<CustomField>
    <fullName>HP_Prestataire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestataire</label>
    <referenceTo>HP_PortailPrestataire__c</referenceTo>
    <relationshipLabel>Souscriptions Happe</relationshipLabel>
    <relationshipName>Souscriptions_Happe</relationshipName>
    <type>Lookup</type>
</CustomField>