force-app/main/default/objects/HP_Souscription__c/fields/HP_Puissance_Compteur_electrique__c.field-meta.xml
<CustomField>
    <fullName>HP_Puissance_Compteur_electrique__c</fullName>
    <label>Puissance Compteur électricité</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>