force-app/main/default/objects/HP_Souscription__c/fields/HP_RaisonAnnulation__c.field-meta.xml
<CustomField>
    <fullName>HP_RaisonAnnulation__c</fullName>
    <label>Raison de l’annulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOUBLON</fullName>
                <label>Doublon</label>
            </value>
            <value>
                <fullName>INELIGIBLE</fullName>
                <label>Inéligible</label>
            </value>
            <value>
                <fullName>INDEX_NON_COMMUNIQES</fullName>
                <label>Index non communiqués</label>
            </value>
            <value>
                <fullName>AUTRE</fullName>
                <label>Autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>