force-app/main/default/objects/HP_Souscription__c/fields/HP_Revision_Document__c.field-meta.xml
<CustomField>
    <fullName>HP_Revision_Document__c</fullName>
    <label>Révision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>