force-app/main/default/objects/HP_Souscription__c/fields/HP_RUM__c.field-meta.xml
<CustomField>
    <fullName>HP_RUM__c</fullName>
    <label>RUM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>