force-app/main/default/objects/HP_Souscription__c/fields/HP_Statut__c.field-meta.xml
<CustomField>
    <fullName>HP_Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAVE_1</fullName>
                <label>Devis envoyé</label>
            </value>
            <value>
                <fullName>SAVE_2</fullName>
                <label>Demande envoyée</label>
            </value>
            <value>
                <fullName>SAVE_2_CONFIRMED</fullName>
                <label>CPV envoyées</label>
            </value>
            <value>
                <fullName>CANCEL</fullName>
                <label>CPV annulées</label>
            </value>
            <value>
                <fullName>RETRACT</fullName>
                <label>CPV rétractées</label>
            </value>
            <value>
                <fullName>PERIMEE</fullName>
                <label>CPV périmées</label>
            </value>
            <value>
                <fullName>SAVE_3</fullName>
                <label>CPV signées</label>
            </value>
            <value>
                <fullName>CPV Périmées</fullName>
                <isActive>false</isActive>
                <label>CPV Périmées</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>