force-app/main/default/objects/HP_Souscription__c/fields/HP_TECH_ConsentementIncrement__c.field-meta.xml
<CustomField>
    <fullName>HP_TECH_ConsentementIncrement__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HP_TECH_ConsentementIncrement</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>