force-app/main/default/objects/HP_Souscription__c/fields/HP_TECH_DedupOrder__c.field-meta.xml
<CustomField>
    <fullName>HP_TECH_DedupOrder__c</fullName>
    <label>HP_TECH_DedupOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>