force-app/main/default/objects/HP_Souscription__c/fields/HP_TECH_FormulaConcatField__c.field-meta.xml
<CustomField>
    <fullName>HP_TECH_FormulaConcatField__c</fullName>
    <description>concatener HP_NumPDL__c,HP_NumberPCE__c et HP_Date_Origine__c  de la souscription.</description>
    <formula>HP_NumPDL__c &amp; &quot;_&quot; &amp; HP_NumberPCE__c</formula>
    <label>HP_TECH_FormulaConcatField</label>
    <type>Text</type>
</CustomField>