force-app/main/default/objects/HP_Souscription__c/fields/HP_TECH_FormulaEnergyPDLPCEConcatField__c.field-meta.xml
<CustomField>
    <fullName>HP_TECH_FormulaEnergyPDLPCEConcatField__c</fullName>
    <description>concatener HP_NumPDL__c,HP_NumberPCE__c, HP_Type_Energie__c et le contact de la souscription.</description>
    <formula>HP_NumPDL__c &amp; &quot;_&quot; &amp; HP_NumberPCE__c &amp; &quot;_&quot; &amp; TEXT( HP_Type_Energie__c ) &amp; &quot;_&quot; &amp;  HP_Contact__c</formula>
    <label>HP_TECH_FormulaEnergyPDLPCEConcatField</label>
    <type>Text</type>
</CustomField>