force-app/main/default/objects/HP_Souscription__c/fields/HP_Tech_Is_Apex_Processing__c.field-meta.xml
<CustomField>
    <fullName>HP_Tech_Is_Apex_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP_Tech_Is_Apex_Processing</label>
    <type>Checkbox</type>
</CustomField>