force-app/main/default/objects/HP_Souscription__c/fields/HP_TECH_wasSave3__c.field-meta.xml
<CustomField>
    <fullName>HP_TECH_wasSave3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Signé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>