force-app/main/default/objects/HP_Souscription__c/fields/HP_Type_Energie__c.field-meta.xml
<CustomField>
    <fullName>HP_Type_Energie__c</fullName>
    <label>Type Energie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ELECTRICITY</fullName>
                <label>Electricité</label>
            </value>
            <value>
                <fullName>GAS</fullName>
                <label>Gaz</label>
            </value>
            <value>
                <fullName>COMBINED_GAS_AND_ELECTRICITY</fullName>
                <label>Dual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>