force-app/main/default/objects/HP_Souscription__c/fields/HP_type_Souscription__c.field-meta.xml
<CustomField>
    <fullName>HP_type_Souscription__c</fullName>
    <label>Type de Souscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MOVING_IN</fullName>
                <label>Emménagement</label>
            </value>
            <value>
                <fullName>SWITCH_SUPLIER</fullName>
                <label>Changement de fournisseur</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>