force-app/main/default/objects/HP_Souscription__c/fields/HP_UpdatePropositionStatus__c.field-meta.xml
<CustomField>
    <fullName>HP_UpdatePropositionStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mise à jour statut proposition</label>
    <type>Checkbox</type>
</CustomField>