force-app/main/default/objects/HP_Souscription__c/fields/HP_VoucherCode__c.field-meta.xml
<CustomField>
    <fullName>HP_VoucherCode__c</fullName>
    <label>Voucher code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>