force-app/main/default/objects/HP_Souscription__c/fields/OK_Electricite__c.field-meta.xml
<CustomField>
    <fullName>OK_Electricite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OK Electricité</label>
    <type>Checkbox</type>
</CustomField>