force-app/main/default/objects/HP_Souscription__c/fields/OK_Gaz__c.field-meta.xml
<CustomField>
    <fullName>OK_Gaz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OK Gaz</label>
    <type>Checkbox</type>
</CustomField>