force-app/main/default/objects/HP_Souscription__c/fields/rductionConsommationAnnee2Electricite__c.field-meta.xml
<CustomField>
    <fullName>rductionConsommationAnnee2Electricite__c</fullName>
    <formula>TEXT( reduction_a2_elec__c ) +&quot;%&quot;</formula>
    <label>Réduction Consommation Année 2 Elec</label>
    <type>Text</type>
</CustomField>