force-app/main/default/objects/HP_Souscription__c/fields/reduction_a1_elec__c.field-meta.xml
<CustomField>
    <fullName>reduction_a1_elec__c</fullName>
    <label>Réduction Consommation Année 1 Elec</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>