force-app/main/default/objects/HP_Souscription__c/fields/reduction_a2_gaz__c.field-meta.xml
<CustomField>
    <fullName>reduction_a2_gaz__c</fullName>
    <label>Réduction Consommation Année 2 Gaz</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>