force-app/main/default/objects/HP_Souscription__c/fields/reduction_abo_elec__c.field-meta.xml
<CustomField>
    <fullName>reduction_abo_elec__c</fullName>
    <label>Réduction abonnement Electricité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>